Fixed scrollbars.  Did position adjustments.

--- a/apps/eccap_calc/resources/ledger.css
+++ b/apps/eccap_calc/resources/ledger.css
@@ -6,15 +6,15 @@
 	overflow-y:hidden !important;
 }
 
+.amount {
+	overflow-y:scroll !important;
+}
+
 .sc-label-view.sc-huge-size {
   font-size:24px;
   line-height:28px;
 }
 
-.scroll-y, .sc-scroll-view {
-  overflow-y: scroll;
-}
-
-div#sc517 {
-  border-style: none;
+body.sc-theme.sc-view.sc-gray-border {
+  border-style: none !important;
 }
